--- a/src/components/Navigation/SideDrawer/SideDrawer.module.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.module.css
@@ -1,12 +1,12 @@
 .SideDrawer {
   position: fixed;
   width: 280px;
-  max-width: 70%;
+  max-width: 50%;
   height: 100%;
   left: 0;
   top: 0;
   z-index: 200;
-  background-color: white;
+  background-color: rgb(255, 230, 0);
   padding: 32px 16px;
   box-sizing: border-box;
   transition: transform 0.3s ease-out;
