--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -16,3 +16,12 @@
 .Toolbar nav {
   height: 100%;
 }
+
+@media (max-width: 499px) {
+  .DesctopOnly {
+    display: none;
+  }
+  .LogoMobileOnly {
+    display: none;
+  }
+}
