changed logo  style

--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -16,7 +16,7 @@
 @media (min-width: 500px) {
   .Logo {
     position: relative;
-    margin-left: 570%;
+    margin: auto 0;
     height: 45px;
     width: auto;
   }
