--- a/src/components/Navigation/NavigarionItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigarionItems/NavigationItem/NavigationItem.module.css
@@ -38,7 +38,18 @@
   .NavigationItem a:hover,
   .NavigationItem a:active,
   .NavigationItem a.active {
-    background-color: #8f5c2c;
+    background: #283048; /* fallback for old browsers */
+    background: -webkit-linear-gradient(
+      to top,
+      #859398,
+      #283048
+    ); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(
+      to top,
+      #859398,
+      #283048
+    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     border-bottom: 4px solid #40a4c8;
     color: white;
   }
